parsers/tree-sitter-eprime/corpus/types.txt
==============
Boolean domain
==============

given x: bool

---

(source_file (param_decl name: (identifier) domain: (boolean_domain)))

==============
Integer domain
==============

given a: int(1..10)
given b: int(-1..-10)
given c: int(0..0)
given d: int(1..10, 15..20, 5)
given e: int(1..10) union int(15..20)
given f: int(1..10) intersect int(15..20)
given g: int(1..10) - int(15..20)
given h: int(1..10) union int(15..20) - int(2,4,6)
given i: int(1,3,5..10,15..20)

---

(source_file
  (param_decl name: (identifier) domain:
    (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal))))
  (param_decl name: (identifier) domain:
    (integer_domain member: (range_literal min: (prefix_operator operand: (integer_literal)) max: (prefix_operator operand: (integer_literal)))))
  (param_decl name: (identifier) domain:
    (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal))))
  (param_decl name: (identifier) domain:
    (integer_domain
      member: (range_literal min: (integer_literal) max: (integer_literal))
      member: (range_literal min: (integer_literal) max: (integer_literal))
      member: (integer_literal)))
  (param_decl name: (identifier) domain: (domain_operation
    left: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal)))
    right: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal)))))
  (param_decl name: (identifier) domain: (domain_operation
    left: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal)))
    right: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal)))))
  (param_decl name: (identifier) domain: (domain_operation
    left: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal)))
    right: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal)))))
  (param_decl name: (identifier) domain: (domain_operation left: (domain_operation
    left: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal)))
    right: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal))))
    right: (integer_domain member: (integer_literal) member: (integer_literal) member: (integer_literal))))
  (param_decl name: (identifier) domain:
    (integer_domain
      member: (integer_literal)
      member: (integer_literal)
      member: (range_literal min: (integer_literal) max: (integer_literal))
      member: (range_literal min: (integer_literal) max: (integer_literal)))))

=============
Matrix Domain
=============

given simple: matrix indexed by [int(1..4)] of bool
given square: matrix indexed by [int(1..10),int(1..10)] of int(1..5)
given split_index: matrix indexed by [int(-2..5),int(-10..10,15,17)] of int(1..5)

---

(source_file
  (param_decl name: (identifier) domain: (matrix_domain
    index: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal)))
    base: (boolean_domain)))
  (param_decl name: (identifier) domain: (matrix_domain
    index: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal)))
    index: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal)))
    base: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal)))))
  (param_decl
    name: (identifier)
    domain: (matrix_domain
      index: (integer_domain member: (range_literal min: (prefix_operator operand: (integer_literal)) max: (integer_literal)))
      index: (integer_domain
        member: (range_literal min: (prefix_operator operand: (integer_literal)) max: (integer_literal))
        member: (integer_literal)
        member: (integer_literal))
      base: (integer_domain member: (range_literal min: (integer_literal) max: (integer_literal))))))
